input range, nuevas imágenes, botones, modal, filtros y listado de productos

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -79,8 +79,8 @@
         top: 115px;
       }
 
-      #slider {
-        margin-top: 57px;
+      body {
+        padding-top: 170px;
       }
 
       .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
