--- a/views/menu.html
+++ b/views/menu.html
@@ -83,7 +83,6 @@
   </nav>
 </div>
 
-
 <div class="container">
   <!-- Modal -->
   <div class="modal fade" id="modalLogin" role="dialog">
@@ -92,7 +91,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header modal-header-dark">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <button type="button" class="close" data-dismiss="modal"><i class="fa fa-times"></i></button>
           <h4 class="modal-title">Iniciar sesión</h4>
         </div>
         <div class="modal-body">
