--- a/css/forms.css
+++ b/css/forms.css
@@ -12,7 +12,7 @@ input, textarea, select {
   border-radius: none; 
 }
 
-form  .form-control {
+.form-control {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
