--- a/views/footer.html
+++ b/views/footer.html
@@ -1,7 +1,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <nav class="col-md-3">
+          <nav class="col-sm-3">
             <h4>Catálogos</h4>
             <ul>
               <li><a href="index.php?ctrl=productos&action=list">Dama</a></li>
@@ -9,14 +9,14 @@
               <li><a href="index.php?ctrl=productos&action=list">Infantil</a></li>
             </ul>
           </nav>
-          <nav class="col-md-3">
+          <nav class="col-sm-3">
             <h4>Políticas</h4>
             <ul>
               <li><a href="#">Términos y Condiciones</a></li>
               <li><a href="#">Aviso de Privacidad</a></li>
             </ul>
           </nav>
-          <nav class="col-md-3">
+          <nav class="col-sm-3">
             <h4>Mi cuenta</h4>
             <ul>
               <li><a href="#">Mi cuenta</a></li>
@@ -25,7 +25,7 @@
               <li><a href="#">Cambios y Devoluciones</a></li>
             </ul>
           </nav>
-          <nav class="col-md-3">
+          <nav class="col-sm-3">
             <h4>Contáctanos</h4>
             <div>
               <p>Boulevard Puerta de Hierro #549</p>
@@ -47,6 +47,7 @@
     <script src="js/main.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script src="js/validator.js"></script>
+    <script src="js/jquery-ui.js"></script>
     <!--<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>-->
     <!--<script src="js/mapi.js"></script>-->
 
@@ -109,6 +110,15 @@
             nav:true
         }
     }
+});
+
+
+
+
+          $('#flat-slider').slider({
+  orientation: 'horizontal',
+  range:       true,
+  values:      [17,67]
 });
       });
       /*
