--- a/css/forms.css
+++ b/css/forms.css
@@ -21,14 +21,14 @@ input, textarea, select {
 form label {
   padding: 5px 0;
   display: block;
-  background-color: #f9f9f9;
+  /*background-color: #f9f9f9;*/
 }
 
 .text-center input[type=file] {
-      -webkit-appearance: push-button;
-      position: absolute;
-    clip: rect(0px 0px 0px 0px);
-    display: block;
+  -webkit-appearance: push-button;
+  position: absolute;
+  clip: rect(0px 0px 0px 0px);
+  display: block;
 }
 
 .required {
@@ -52,9 +52,130 @@ form label {
   border-radius: 0px;
 }
 
-.input-group-addon {
+.input-group-addon {#31B404;
   width: 34px;
 }
 
+
+
+.has-error .checkbox, 
+.has-error .checkbox-inline, 
+.has-error .control-label, 
+.has-error .help-block, 
+.has-error .radio, 
+.has-error .radio-inline, 
+.has-error.checkbox label, 
+.has-error.checkbox-inline label, 
+.has-error.radio label, 
+.has-error.radio-inline label {
+    color: #f00;
+}
+
+.has-error .form-control {
+  border-color: #f00;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+
+.has-success .checkbox, 
+.has-success .checkbox-inline, 
+.has-success .control-label, 
+.has-success .help-block, 
+.has-success .radio, 
+.has-success .radio-inline, 
+.has-success.checkbox label, 
+.has-success.checkbox-inline label, 
+.has-success.radio label, 
+.has-success.radio-inline label {
+    color: #31B404;
+}
+
+.has-success .form-control {
+  border-color: #31B404;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.error-message {
+    position: relative;
+    background-color: #f00;
+    padding: 6px 12px;
+    color: white;
+    font-weight: bold;
+    margin-left: 16px;
+    margin-top: 6px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    clear: both;
+
+    transition: all 3s ease-in;
+    -o-transition: all 3s ease-in;
+    -moz-transition: all 3s ease-in;
+    -webkit-transition: all 3s ease-in;
+}
+
+.error-message:before {
+    position: absolute;
+    content: '';
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: 2;
+    width: .6em;
+    height: .6em;
+    -webkit-transition: background .2s ease;
+    transition: background .2s ease;
+    background-color: #f00;
+    background-image: none;
+    top: -4px;
+}
+
+.succes-message {
+    position: relative;
+    background-color: #31B404;
+    padding: 6px 12px;
+    color: white;
+    font-weight: bold;
+    margin-left: 16px;
+    margin-top: 6px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    clear: both;
+
+    transition: all 3s ease-in;
+    -o-transition: all 3s ease-in;
+    -moz-transition: all 3s ease-in;
+    -webkit-transition: all 3s ease-in;
+}
+
+.succes-message:before {
+    position: absolute;
+    content: '';
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: 2;
+    width: .6em;
+    height: .6em;
+    -webkit-transition: background .2s ease;
+    transition: background .2s ease;
+    background-color: #31B404;;
+    background-image: none;
+    top: -4px;
+}
 
 
