--- a/views/contacto.html
+++ b/views/contacto.html
@@ -1,56 +1,57 @@
 <div class="container-contact">
+  <div class="row">
+      <div class="col-sm-12">
+        <div id="gmap">
+          <div id='gmap_canvas' style='height:500px;width:100%;'></div>
+        </div>
+      </div>
+    </div>
   <div class="container">
     <!-- Example row of columns -->
+
+
     <div class="row">
-      <div class="col-md-12">
-        <h2>Contáctanos</h2>
-
+      <div class="col-sm-12">
+        <h1>Contacto</h1>
         <form class="form" role="form" onsubmit="return validate()" data-validate>
-          <div class="row">
-            <div class="col-md-6">
-              <div>
-              <div class="form-group">
-                <input type="text" class="form-control input-lg" placeholder="Nombre" data-required data-name>
-              </div>
-              </div>
-              <div>
-              <div class="form-group">
-                <input type="text" class="form-control input-lg" placeholder="Apellido" data-required data-lastname>
-              </div>
-              </div>
+          <div class="col-sm-6">
+            <div class="form-group">
+              <label for="nombre">Nombre</label>
+              <input type="text" class="form-control" name="nombre" id="nombre" data-required data-name/>
             </div>
 
-            <div class="col-md-6">
-              <div>
-              <div class="form-group">
-                <input type="text" class="form-control input-lg" placeholder="Correo" data-required data-email>
-              </div>
-              </div>
-              <div>
-              <div class="form-group">
-                <input type="tel" class="form-control input-lg" placeholder="Teléfono" data-required>
-              </div>
-              </div>
-            </div>
-
-            <div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <textarea class="form-control" rows="3" data-required> Mensaje ...</textarea>
-                </div>
-              </div>
+            <div class="form-group">
+              <label for="apellido">Apellido</label>
+              <input type="text" class="form-control" name="apellido" id="apellido" data-required data-lastname/>
             </div>
           </div>
-          <div class="row">
-            <button class="btn btn-red btn-lg margin-left-15" type="submit">Enviar</button>
+
+          <div class="col-sm-6">
+            <div class="form-group">
+              <label for="correo">Correo</label>
+              <input type="text" class="form-control" name="correo" id="correo" data-required data-email>
+            </div>
+
+            <div class="form-group">
+              <label for="telefono">Teléfono</label>
+              <input type="tel" class="form-control" name="telefono" id="telefono" data-required>
+            </div>
+          </div>
+
+
+          <div class="col-sm-12">
+            <div class="form-group">
+              <label for="mensaje">Mensaje</label>
+              <textarea class="form-control" name="mensaje" id="mensaje" rows="3" data-required></textarea>
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <button class="btn btn-red btn-block" type="submit"> <i class="fa fa-paper-plane"></i> Enviar </button>
           </div>
         </form>
       </div>
     </div>
-    <hr>
+    <hr/>
   </div> <!-- /container -->  
-  <div id="map_canvas" style="width:100%; height:900px">
-    <img id="map" src="img/map.png"/>
-  </div>
-  <!--<div id="map_canvas" style="width:100%; height:900px"></div>-->
 </div> 
