--- a/views/footer.html
+++ b/views/footer.html
@@ -48,6 +48,7 @@
     <script src="js/owl.carousel.js"></script>
     <script src="js/validator.js"></script>
     <script src="js/jquery-ui.js"></script>
+    <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
     <!--<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>-->
     <!--<script src="js/mapi.js"></script>-->
 
@@ -129,5 +130,6 @@
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X','auto');ga('send','pageview');*/
     </script>
+    <script type='text/javascript'>function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(20.6596988,-103.34960920000003),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(20.6596988,-103.34960920000003)});infowindow = new google.maps.InfoWindow({content:'<strong>AE</strong><br>Guadalajara <br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
   </body>
 </html>
