--- a/views/menu.html
+++ b/views/menu.html
@@ -98,15 +98,15 @@
           <div class="login">
             <form role="form" onsubmit="return validateLogin()" data-validate-login>
               <div class="form-group">
-                <div class="input-group">
-                  <span class="input-group-addon" id="user-addon"><i class="fa fa-user"></i></span>
-                  <input type="text" class="form-control" placeholder="Usuario" aria-describedby="user-addon" data-required data-email/>
+                <label class="control-label">Usuario</label>
+                <div>
+                  <input type="text" class="form-control" data-required data-email/>
                 </div>
               </div>
               <div class="form-group">
-                <div class="input-group">
-                  <span class="input-group-addon" id="password-addon"><i class="fa fa-key"></i></span>
-                  <input type="password" class="form-control" placeholder="Contraseña" aria-describedby="password-addon" data-required data-password/>
+                <label class="control-label">Contraseña</label>
+                <div>
+                  <input type="password" class="form-control" data-required data-password/>
                 </div>
               </div>
   
