--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,38 @@ section {
   background:none!important;
 }
 
+#info-contacto {
+
+}
+
+#info-contacto ul {
+  
+}
+
+#info-contacto ul li {
+  list-style-type: none;
+}
+
+#info-contacto ul li .icon .fa{
+
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    /*
+    margin-top: -20px;
+          position: absolute;
+    top: 50%;
+    left: 0;*/
+}
+
+#info-contacto ul li .text {
+  font-size: 20px;
+  color: #A4A4A4;
+  font-weight: bold;
+}
+
+
 
 
 
