--- a/views/register.html
+++ b/views/register.html
@@ -1,11 +1,88 @@
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+
 
 <section class="container">  
-  <form class="form-horizontal col-md-12" method="post" role="form" onsubmit="return validate()" data-validate>
+  <form method="post" role="form" onsubmit="return validate()" data-validate> 
     <fieldset>
       <legend>Registro</legend>
-      <div class="col-md-4">
+      <div class="col-sm-7">
+        <div  class="form-group">
+          <label for="nombre" class="control-label">Nombre <span class="required">*</span></label>
+          <div>
+          <input class="form-control " id="nombre" name="nombre" type="text" data-required data-name/>
+          </div>
+        </div>
+
+        <div  class="form-group">      
+          <label for="apellidos" class="control-label">Apellido <span class="required">*</span></label>
+          <div>
+          <input class="form-control" id="apellidos" name="apellidos" type="text" data-required data-lastname/>
+          </div>
+        </div>
+
+        <div class="form-group">                      
+          <label for="correo" class="control-label">Correo <span class="required">*</span></label>
+          <div>
+          <input class="form-control" type="text" id="correo" name="correo" data-required data-email/>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="contrasena" class="control-label">Contraseña <span class="required">*</span></label>
+          <div>
+          <input class="form-control" type="password" name="contrasena" data-required data-password data-samepassword/>
+          </div>
+        </div>
+
+        <div  class="form-group">
+          <label for="repetir-contrasena" class="control-label">Repetir contraseña <span class="required">*</span></label>
+          <div>
+          <input class="form-control" type="password" name="repetir-contrasena" data-required data-password data-samepassword/>
+          </div>
+        </div>
+
+        <div  class="form-group">
+          <label for="fecha_nacimiento" class="control-label">Fecha de nacimiento</label>
+          <div>
+          <input class="form-control" type="date" id="fecha_nacimiento" name="fecha_nacimiento" placeholder="dd/mm/aaaa" data-required/>
+          </div>
+        </div>
+
+        <div  class="form-group">
+          <label class="control-label" for="genero">Género <span class="required">*</span></label>
+          <div class="col-md-12">
+            <label class="radio-inline" for="femenino">Mujer</label>
+            <input type="radio" name="genero" id="femenino" value="femenino" checked="checked"/>              
+            <label class="radio-inline"  for="masculino">Hombre</label>  
+            <input type="radio" name="genero" id="masculino" value="masculino"/>    
+          </div>      
+        </div>
+      </div>
+
+
+      <div class="col-sm-5">
         <figure class="thumbnail">
-          <label for="foto" class="text-left">Nombre</label>
+          <label for="foto" class="text-center">Foto de perfil</label>
           <img src="img/200x250.png" alt="thumbnail">
           <figcaption class="caption">
             <div class="text-center">
@@ -15,64 +92,16 @@
             </div>
           </figcaption>
         </figure>
-      </div>
-      <div class="col-md-8">
-        <div  class="form-group">
-          <label for="name" class="col-md-3 control-label text-left">Nombre</label>
-          <div class="col-md-9">
-            <input class="form-control " id="name" name="name" type="text" placeholder="Name" data-required data-name/>
-          </div>
-        </div>
 
-        <div  class="form-group">      
-          <label for="lastname" class="col-md-3 control-label text-left">Apellido</label>
-          <div class="col-md-9">
-            <input class="form-control" id="lastname" name="lastname" type="text" placeholder="Last Name" data-required data-lastname/>
-          </div>
-        </div>
-
-        <div class="form-group">                      
-          <label for="email" class="col-md-3 control-label text-left"> Correo</label>
-          <div class="col-md-9">
-            <input class="form-control" type="text" name="email" id="email" placeholder="Email" data-required data-email/>
+        <div class="form-group">
+          <div class="col-md-6 col-md-offset-3">
+            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i> Agregar domicilio </button>
           </div>
         </div>
 
         <div class="form-group">
-          <label for="password" class="col-md-3 control-label text-left"> Contraseña </label>
-          <div class="col-md-9">
-            <input class="form-control" type="password" name="password" placeholder="Password" data-required data-password data-samepassword/>
-          </div>
-        </div>
-
-        <div  class="form-group">
-          <label type="Confirmpass" class="col-md-3 control-label text-left">Repetir contraseña</label>
-          <div class="col-md-9">
-            <input class="form-control" type="password" name="Confirmpass" placeholder="Confirm Passsword" data-required data-password data-samepassword/>
-          </div>
-        </div>
-
-        <div  class="form-group">
-          <label class="col-md-3 control-label text-left" for="gender">Género</label>
-          <div class="col-md-9">
-            <label class="radio-inline"  for="fem">Mujer</label>
-            <input type="radio" name="gender" id="fem" value="Female" checked="checked"/>              
-            <label class="radio-inline"  for="male">Hombre</label>  
-            <input type="radio" name="gender" id="male" value="Male"/>    
-          </div>      
-        </div>
-      
-        <div  class="form-group">
-          <label for="bday" class="col-md-3 control-label text-left">Fecha de nacimiento</label>
-          <div class="col-md-9">
-            <input class="form-control" type="date" id="bday" name="bday" placeholder="Birthday DD/MM/YY" data-required/>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label for="phone" class="col-md-3 control-label text-left">Teléfono</label>
-          <div class="col-md-9">
-            <input class="form-control" type="tel" id="phone" name="phone" placeholder="Phone Number" data-required/>
+          <div class="col-md-6 col-md-offset-3">
+            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i> Agregar teléfono </button>
           </div>
         </div>
 
@@ -82,6 +111,8 @@
           </div>
         </div>
       </div>
+
+ 
     </fieldset>
   </form>
 </section>
