--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,61 @@ table {
 	empty-cells: 	show;
 }
 
+.padding {
+  padding: 50px;
+}
+
+.padding-left-15 {
+  padding-left: 15px;
+}
+
+.padding-right-15 {
+  padding-right: 15px;
+}
+
+.margin-top-50 {
+  margin-top: 50px;
+}
+
+.margin-top-83 {
+  margin-top: 85px;
+}
+
+.margin-left-15 {
+  margin-left: 15px;
+}
+
+.margin-right-15 {
+  margin-right: 15px;
+}
+
+.text-left {
+  text-align: left!important;
+}
+
+.text-right {
+  text-align: right!important;
+}
+
+.text-center {
+  text-align: center!important;
+}
+
+.pull-rigth {
+  float: right;
+}
+
+
+
+
+
+
 
 .fa {
   color: #f00;
 }
 
+.fa.fa-plus,
 .fa.fa-paper-plane,
 .fa.fa-times,
 .fa.fa-check,
@@ -33,6 +83,8 @@ table {
 .white {
   background: #fff;
 }
+
+
 
 
 
