--- a/css/styles.css
+++ b/css/styles.css
@@ -340,7 +340,7 @@ section {
 
 #gmap {
   overflow:hidden;
-  height:500px;
+  height:300px;
   width:100%;
 }
 
@@ -362,20 +362,14 @@ section {
 }
 
 #info-contacto ul li .icon .fa{
-
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    /*
-    margin-top: -20px;
-          position: absolute;
-    top: 50%;
-    left: 0;*/
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
 }
 
 #info-contacto ul li .text {
-  font-size: 20px;
+  font-size: 18px;
   color: #A4A4A4;
   font-weight: bold;
 }
@@ -387,37 +381,19 @@ section {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*  CARRITO   */
 #shopping-cart{
   font-size: 1em;
   text-align: center!important;
+  padding: 30px 0;
 }
 #shopping-cart .header-table{
   padding: 15px 0;
   background-color: #f0eff1;
-  margin-bottom: 30px;
+  margin: 20px 0;
 }
 #shopping-cart h4{
-  font-size: 1em;
+  font-weight: bold;
   margin-top: 0;
 }
 #shopping-cart article {}
@@ -448,61 +424,6 @@ section {
 
 
 
-.padding {
-	padding: 50px;
-}
-
-.padding-top-50 {
-	padding-top: 50px;
-}
-
-.padding-top-80 {
-	padding-top: 80px;
-}
-
-.padding-left-15 {
-	padding-left: 15px;
-}
-
-.padding-right-15 {
-	padding-right: 15px;
-}
-
-.padding-right-15 {
-	padding-right: 15px;
-}
-
-.margin-top-50 {
-	margin-top: 50px;
-}
-
-.margin-top-83 {
-	margin-top: 85px;
-}
-
-.margin-left-15 {
-	margin-left: 15px;
-}
-
-.margin-right-15 {
-	margin-right: 15px;
-}
-
-.text-left {
-	text-align: left!important;
-}
-
-.text-right {
-	text-align: right!important;
-}
-
-.text-center {
-	text-align: center!important;
-}
-
-.pull-rigth {
-  float: right;
-}
 
 
 
@@ -546,12 +467,6 @@ section {
     background-color: #f0f3f4;
     margin-left: 300px;
 }
-/*
-.content {
-    padding: 20px 15px;
-    background: #f0f3f4;
-}
-*/
 
 
 /* Producto */
