--- a/views/shoppingcart.html
+++ b/views/shoppingcart.html
@@ -1,4 +1,4 @@
-<div class="container-fluid margin-top-50">
+<div class="container-fluid">
   <section id="shopping-cart">
 		<form class="form" method="post" >
 			<fieldset> 
@@ -141,7 +141,33 @@
 
 
 
+
+
+
+
+
+
+        <div class="row header-table">   
+        </div>
+        <div class="row">
+          <div class="col-sm-offset-5 col-sm-2">
+            <h4 class="name">Total</h4>
+          </div>
+          <div class="col-sm-3">
+            <span>$ 123,456,789.00</span>
+          </div>   
+          <div class="col-sm-2">
+            <button class="btn btn-red btn-lg btn-block"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Comprar</button>
+          </div>   
+        </div>
+
+
+
+
 			</fieldset>
+      <div class="col-sm-12">
+        
+      </div>
 		</form>
   </section>    
 </div>
