--- a/views/menu.html
+++ b/views/menu.html
@@ -96,7 +96,7 @@
         </div>
         <div class="modal-body">
           <div class="login">
-            <form role="form" onsubmit="return validateLogin()" data-validate-login>
+            <form method="post" role="form" onsubmit="return validateLogin()" data-validate-login>
               <div class="form-group">
                 <label class="control-label">Usuario</label>
                 <div>
