--- a/css/forms.css
+++ b/css/forms.css
@@ -26,12 +26,12 @@ form label {
   display: block;
   /*background-color: #f9f9f9;*/
 }
+.btn-upload {
+  overflow: hidden;
+}
 
-.text-center input[type=file] {
-  -webkit-appearance: push-button;
-  position: absolute;
-  clip: rect(0px 0px 0px 0px);
-  display: block;
+input[type=file] {
+  display: none;
 }
 
 .required {
