--- a/views/register.html
+++ b/views/register.html
@@ -20,9 +20,8 @@
 
 
 
-
 <section class="container">  
-  <form method="post" role="form" onsubmit="return validate()" data-validate> 
+  <form method="post" role="form" onsubmit="return validate()" enctype="multipart/form-data" data-validate > 
     <fieldset>
       <legend>Registro</legend>
       <div class="col-sm-7">
@@ -70,7 +69,7 @@
 
         <div  class="form-group">
           <label class="control-label" for="genero">Género <span class="required">*</span></label>
-          <div class="col-md-12">
+          <div class="form-group">
             <label class="radio-inline" for="femenino">Mujer</label>
             <input type="radio" name="genero" id="femenino" value="femenino" checked="checked"/>              
             <label class="radio-inline"  for="masculino">Hombre</label>  
@@ -81,37 +80,31 @@
 
 
       <div class="col-sm-5">
-        <figure class="thumbnail">
+        <figure class="row thumbnail">
           <label for="foto" class="text-center">Foto de perfil</label>
           <img src="img/200x250.png" alt="thumbnail">
-          <figcaption class="caption">
-            <div class="text-center">
-              <button type="button" class="btn btn-dark"><i class="fa fa-trash"></i> Eliminar</button>
-              <a href="#"  role="button"></a> <a href="#" class="btn btn-red" role="button"><i class="fa fa-upload"></i> Cargar</a>
-              <input type="file" id="image" name="image" class="btn btn-red" accept="image/jpg,image/png" data-image role="button"/>
-            </div>
+          <figcaption class="col-md-6 col-md-offset-3">
+            <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
+            <input type="file" id="image" name="image" accept="image/jpg,image/png" data-image/>
           </figcaption>
         </figure>
 
-        <div class="form-group">
-          <div class="col-md-6 col-md-offset-3">
-            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i> Agregar domicilio </button>
-          </div>
-        </div>
+        <div class="row">
+          <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+            <div class="form-group">
+              <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i> Agregar domicilio </button>
+            </div>
 
-        <div class="form-group">
-          <div class="col-md-6 col-md-offset-3">
-            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i> Agregar teléfono </button>
-          </div>
-        </div>
+            <div class="form-group">
+              <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i> Agregar teléfono </button>
+            </div>
 
-        <div class="form-group">
-          <div class="col-md-6 col-md-offset-3">
-            <button class="btn btn-red btn-lg btn-block" type="submit"><i class="fa fa-paper-plane"></i> Guardar </button>
+            <div class="form-group">
+              <button class="btn btn-red btn-lg btn-block" type="submit"><i class="fa fa-paper-plane"></i> Guardar</button>
+            </div>
           </div>
         </div>
       </div>
-
  
     </fieldset>
   </form>
