--- a/views/register.html
+++ b/views/register.html
@@ -82,10 +82,10 @@
       <div class="col-sm-5">
         <figure class="row thumbnail">
           <label for="foto" class="text-center">Foto de perfil</label>
-          <img src="img/200x250.png" alt="thumbnail">
+          <img src="img/200x250.png" alt="thumbnail" id="thumbnail-file" data-thumbnail>
           <figcaption class="col-md-6 col-md-offset-3">
             <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
-            <input type="file" id="image" name="image" accept="image/jpg,image/png" data-image/>
+            <input type="file" id="image" name="image" accept="image/jpg,image/png" data-thumbnail/>
           </figcaption>
         </figure>
 
