--- a/admin/views/categoria-edit.html
+++ b/admin/views/categoria-edit.html
@@ -20,7 +20,7 @@
                       <label class="control-label col-md-4 col-sm-4 col-xs-12" for="image">Image
                       </label>
                       <div class="col-md-7 col-sm-7 col-xs-12">
-                        <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-image/>
+                        <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-required  data-image/>
                       </div>
                     </div>
                   </div>
