--- a/admin/views/navigation.html
+++ b/admin/views/navigation.html
@@ -9,18 +9,15 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
-  <link rel="stylesheet" href="../css/font-awesome.css"/>
-  <link rel="stylesheet" href="../css/bootstrap.css"/>
-  <link rel="stylesheet" href="../css/bootstrap-theme.css"/>
+  <link rel="icon" type="image/png" href="../img/icono.jpg" />
   <link rel="stylesheet" href="../css/normalize.css"/>
-  <link rel="stylesheet" href="../css/animate.min.css"/>
-  <link rel="stylesheet" href="../css/pager.css"/>
-  <link rel="stylesheet" href="../css/forms.css"/>
-  <link rel="stylesheet" href="../css/buttons.css"/>
+  <link rel="stylesheet" href="../css/font-awesome.css"/>
+  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../css/bootstrap-theme.min.css"/>
+  <link rel="stylesheet" href="../css/animate.css">
   <link rel="stylesheet" href="../css/bootstrap-datetimepicker.css"/>
   <link rel="stylesheet" href="../css/settings.css"/>
-  <link rel="icon" type="image/png" href="../img/icono.jpg" />
+  
   
   <!--[if lt IE 9]>
       <script src="../js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
