--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -1,13 +1,10 @@
-    <?php 
-      require_once('views/navigation.html');
-    ?>
     <div id="page-users" class="right-side">
       <div class="content">
         <div class="row">
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Users</h3>
+                <h1>Usuario</h1>
               </header>
               <div class="panel-body">
                 <form id="" class="form-horizontal form-label-left" onsubmit="return validate()" data-validate>
@@ -31,55 +28,48 @@
                   <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
                     
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-12 col-xs-12" for="name">Name <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-12 col-xs-12" for="nombre">Nombre <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-12 col-xs-12">
-                          <input type="text" id="name" name="name" class="form-control col-md-7 col-xs-12" data-required data-name value="{{nombre}}" />
+                          <input type="text" id="nombre" name="nombre" class="form-control col-md-7 col-xs-12" data-required data-name value="{{nombre}}" />
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-12 col-xs-12" for="lastname">Last Name <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-12 col-xs-12" for="apellidos">Apellidos <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-12 col-xs-12">
-                          <input type="text" id="lastname" name="lastname" class="form-control col-md-7 col-xs-12" data-required data-lastname value="{{apellido}}"/>
+                          <input type="text" id="apellidos" name="apellidos" class="form-control col-md-7 col-xs-12" data-required data-lastname value="{{apellido}}"/>
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-12 col-xs-12" for="mail">Email <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-12 col-xs-12" for="correo">Correo <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-12 col-xs-12">
-                          <input type="text" id="mail" name="mail" class="form-control col-md-7 col-xs-12" data-required data-email value="{{correo}}"/>
+                          <input type="text" id="correo" name="correo" class="form-control col-md-7 col-xs-12" data-required data-email value="{{correo}}"/>
                         </div>
                       </div>
                       <div class="form-group">
-                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="phone">Phone <span class="required">*</span>
-                        </label>
-                        <div class="col-md-6 col-sm-12 col-xs-12">
-                          <input type="text" id="phone" name="phone" class="form-control col-md-7 col-xs-12" data-required value="{{telefono}}">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-12 col-xs-12" for="gender">Gender <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-12 col-xs-12" for="genero">Género <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                           <div class="radio">
                             <label>
-                              <input type="radio" class="checkbox" checked value="female" id="female" name="gender" checked>Female
+                              <input type="radio" class="checkbox" checked value="femenino" id="femenino" name="genero" checked>Femenino
                             </label>
                           </div>
                           <div class="radio">
                             <label>
-                              <input type="radio" class="checkbox" value="male" id="male" name="gender">Male
+                              <input type="radio" class="checkbox" value="masculino" id="masculino" name="genero">Masculino
                             </label>
                           </div>
                         </div>
                       </div>
                       <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="birthday">Birthday <span class="required">*</span>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="birthday">Fecha de nacimiento <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <div class='input-group date' id='datetimepickerdate_start'>
-                          <input type="text"  id="date_start" name="date_start" class="form-control col-md-7 col-xs-12" data-required data-datetime value={{fecha_nacimiento}}/>
+                          <input type="text"  id="fecha_nacimiento" name="fecha_nacimiento" class="form-control col-md-7 col-xs-12" data-required data-datetime value={{fecha_nacimiento}}/>
                           <span class="input-group-addon">
                             <span class="fa fa-calendar">
                             </span>
@@ -103,12 +93,3 @@
       </div>
       <!--<div class="container-fluid" ></div>-->
     </div>
-    <?php 
-      require_once('views/footer.html');
-    ?>
-    <script src="../js/moment-with-locales.js"></script>
-  <script src="../js/bootstrap-datetimepicker.js"></script>
-  <script src="../js/scripts.js"></script>
-</body>
-</html>
-
